# spam-patriot

./: nixpacks.toml  pyproject.toml  spam.py
